Fix wrapping of search tabs.

--- a/themes/sandal/scss/search.scss
+++ b/themes/sandal/scss/search.scss
@@ -235,10 +235,6 @@
     white-space: nowrap;
     margin-bottom: 1rem;
   }
-  .nav-tabs > li {
-    float: none;
-    display: inline-block;
-  }
   .nav-tabs a,
   .nav-tabs a:hover {
     border: 0;
